client/airbnb.css
.item {
	width: 310px;
	margin: 0 auto;
	margin-top: 20px;
	padding: 10px 15px 10px 15px;
	border: 1px solid #dce0e0;
}

.item:nth-child(1) {
	width: 310px;
	margin-top: 20px;
	border: none;
	padding: 0;
	height: 40px;
}

.new-listing input {
	width: 300px;
	/*margin: 0 auto;*/
	height: 20px;
	color: #484848;
	border: 1px solid #dce0e0;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	padding-left: 5px;
}

ul {
	padding: 0;
}

.listing-list,
.expense-list {
	list-style-type: none;
	padding: 2px 0 6px 0;
	margin-left: 5px;
}

.listing-list .line,
.expense-list .line {
	padding: 6px 0 2px 0;
	border-bottom: 1px solid #dce0e0;
}

.listing-list:nth-child(1) {
	margin-bottom: 15px;
}

.listing-list:nth-last-child(1) .line {
	visibility: hidden;
}

.expense-list:nth-last-child(1) .line {
	display: none;
}

button.delete {
	float: right;
	margin-right: 7px;
	border-width: 0;
	padding: 0 6px 2px 7px;
	background-color: white;
}

.new-expense {
	margin-bottom: 20px;
}

.new-expense input {
	border: 1px solid #dce0e0;
	-webkit-border-radius: 2px;
	-moz-border-radius: 2px;
	border-radius: 2px;
	background-color: #fff;
	color: #484848;
	height: 34px;
	padding-left: 5px;
}

.new-expense input:nth-child(1) {
	width: 150px;
}

.new-expense input:nth-child(2) {
	margin-left: 13px;
	width: 60px;
}

#addExpenseButton {
	border-width: 0;
	padding: 0 6px 2px 7px;
	float: right;
	color: #484848;
	background-color: white;
	border: 1px solid #dce0e0;
	height: 34px;
	width: 34px;
	border-radius: 2px;
}

#ui-price {
	float: right;
	margin-right: 20px;
}

#room-price {
	float: right;
	margin-right: 50px;
}

#individual-total {
	text-align: center;
	margin-bottom: 12px;
}

#total {
	font-size: 75px;
}

#party-itinerary {
	padding: 3px;
	text-align: right;
}

#listing-info {
	padding: 3px;
	text-align: right;
}

#generate-button {
	padding: 9px 20px 9px 20px;
	text-align: center;
	border-radius: 4px;
	height: 40px;
	color: #fff;
	border-color: #ff5a5f;
	background-color: #ff5a5f;
}

#generate-button:hover {
    color: #fff;
	border-color: #ff7e82;
	background-color: #ff7e82;
}

#input-search {
	width: 100%;
	height: 38px;
	padding-left: 30px;
}

#icon-search {
	position: relative;
	float: left;
	top: -27px;
	left: 10px;
}

.date_label_from,
.date_label_to,
.guest_label {
	display: inline-block;
	margin-right: 8px;
}

.date_label_from label,
.date_label_to label,
.guest_label label {
	display: block;
	margin-top: 20px;
}

.guest_label {
	float: right;
}

#from,
#to {
	-webkit-appearance: none;
	width: 98px;
	padding: 6px 6px;
	border: 1px solid #dce0e0;
	color: #484848;
	border-radius: 2px;
	height: 34px;
}
.arrow {
	position: absolute;
}
.arrow::before {
	content: '\25bc';
	font-size: 9px;
	pointer-events: none;
	position: relative;
	color: #767676;
	top: 5px;
	left: 38px;
}

.list-label {
	font-weight: normal;
}

#guests-selector {
	-webkit-appearance: none;
	padding-top: 6px;
	padding-bottom: 6px;
	padding-left: 10px;
	width: 60px;
	height: 34px;
	color: #484848;
	border: 1px solid #dce0e0;
	border-radius: 2px;
	background-color: white;
}

